# cache-patterns-example

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: codspeed.yml
benches/: particle_simulation.rs
benchmarks/: particle_simulation.cpp
include/: aos.h  soa.h  vec3.h
src/: aos.cpp  aos.rs  lib.rs  soa.cpp  soa.rs
